--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    tools:context="tech.billshi.assignment1demo.MainActivity"
+
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="tech.billshi.assignment1.MainActivity">
+
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/no_clicks_yet"
-        android:gravity="center_horizontal" />
+        android:text="@string/no_clicks_yet"/>
 
     <ImageView
+        android:id="@+id/dog_image_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/dogImageView"
-        android:src="@drawable/dog" />
+        android:layout_weight="1" />
 
-    <LinearLayout
+    <Button
+        android:id="@+id/clickBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:text="@string/register_a_click"
+        android:onClick="onClickRegister"/>
 
-        <Button
-            android:id="@+id/clickBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/register_a_click"
-            android:onClick="onClickRegister"
-            android:layout_weight="1"/>
+    <Button
+        android:id="@+id/toggleBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/toggle_image"
+        android:onClick="onClickToggle"/>
 
-        <Button
-            android:id="@+id/toggleBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/toggle_image"
-            android:onClick="onClickToggle"
-            android:layout_weight="1"/>
-    </LinearLayout>
+    <Button
+        android:id="@+id/resetBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/toggle_image"
+        android:onClick="onClickReset"/>
 </LinearLayout>
